additional ci stages

--- a/ci/gocd-test.gocd.yaml
+++ b/ci/gocd-test.gocd.yaml
@@ -12,20 +12,52 @@ pipelines:
         auto_update: true
         branch: main
     stages:
-    - linting:
+      - formatting:
+          fetch_materials: true
+          keep_artifacts: false
+          clean_workspace: false
+          approval:
+            type: success
+            allow_only_on_success: false
+          jobs:
+            black-formatting:
+              timeout: 0
+              tasks:
+              - exec:
+                  arguments:
+                  - --check
+                  - ./src
+                  command: black
+                  run_if: passed
+      - args-sorting:
         fetch_materials: true
         keep_artifacts: false
         clean_workspace: false
         approval:
           type: success
-          allow_only_on_success: false
         jobs:
-          black-formatting:
+          isort-sorting:
             timeout: 0
             tasks:
             - exec:
-                arguments:
-                - --check
+              arguments:
                 - ./src
-                command: black
+                - -v
+                - --check-only
+                command: isort
+                run_if: passed
+      - linting:
+        fetch_materials: true
+        keep_artifacts: false
+        clean_workspace: false
+        approval:
+          type: success
+        jobs:
+          flake8-linting:
+            timeout: 0
+            tasks:
+            - exec:
+              arguments:
+                - ./src
+                command: flake8
                 run_if: passed
