--- a/ci/gocd-test.gocd.yaml
+++ b/ci/gocd-test.gocd.yaml
@@ -12,7 +12,7 @@ pipelines:
         auto_update: true
         branch: main
     stages:
-      - formatting:
+    - formatting:
         fetch_materials: true
         keep_artifacts: false
         clean_workspace: false
@@ -23,41 +23,43 @@ pipelines:
           black-formatting:
             timeout: 0
             tasks:
-              - exec:
+            - exec:
                 arguments:
-                  - --check
-                  - ./src
+                - --check
+                - ./src
                 command: black
                 run_if: passed
-      - args-sorting:
+    - args-sorting:
         fetch_materials: true
         keep_artifacts: false
         clean_workspace: false
         approval:
           type: success
+          allow_only_on_success: false
         jobs:
           isort-sorting:
             timeout: 0
             tasks:
-              - exec:
+            - exec:
                 arguments:
-                  - ./src
-                  - -v
-                  - --check-only
+                - ./src
+                - -v
+                - --check-only
                 command: isort
                 run_if: passed
-      - linting:
+    - linting:
         fetch_materials: true
         keep_artifacts: false
         clean_workspace: false
         approval:
           type: success
+          allow_only_on_success: false
         jobs:
           flake8-linting:
             timeout: 0
             tasks:
-              - exec:
+            - exec:
                 arguments:
-                  - ./src
+                - ./src
                 command: flake8
                 run_if: passed
