--- a/ci/gocd-test.gocd.yaml
+++ b/ci/gocd-test.gocd.yaml
@@ -14,19 +14,6 @@ pipelines:
         branch: main
     stages:
       - build-container:
-        fetch_materials: true
-        keep_artifacts: false
-        clean_workspace: false
-        approval:
-          type: success
-          allow_only_on_success: false
-        jobs:
-          build:
-            timeout: 0
-            tasks:
-              - exec:
-                command: docker build -t "test-build-$(git --git-dir=./gocd-test/.git rev-parse HEAD)" gocd-test/
-      - formatting:
           fetch_materials: true
           keep_artifacts: false
           clean_workspace: false
@@ -34,12 +21,26 @@ pipelines:
             type: success
             allow_only_on_success: false
           jobs:
-            black-formatting:
+            build:
               timeout: 0
               tasks:
                 - exec:
-                    command: docker run "test-build-$(git --git-dir=./gocd-test/.git rev-parse HEAD)" black --check ./src
-                    run_if: passed
+                  command: docker build -t "test-build-$(git --git-dir=./gocd-test/.git rev-parse HEAD)" gocd-test/
+                  run_if: passed
+      # - formatting:
+      #     fetch_materials: true
+      #     keep_artifacts: false
+      #     clean_workspace: false
+      #     approval:
+      #       type: success
+      #       allow_only_on_success: false
+      #     jobs:
+      #       black-formatting:
+      #         timeout: 0
+      #         tasks:
+      #           - exec:
+      #               command: docker run "test-build-$(git --git-dir=./gocd-test/.git rev-parse HEAD)" black --check ./src
+      #               run_if: passed
       - args-sorting:
           fetch_materials: true
           keep_artifacts: false
