--- a/ci/gocd-test.gocd.yaml
+++ b/ci/gocd-test.gocd.yaml
@@ -2,7 +2,7 @@
 format_version: 10
 pipelines:
   gocd-test:
-    group: My-Pipelines
+    group: defaultGroup
     label_template: ${COUNT}
     lock_behavior: none
     display_order: -1
