--- a/ci/gocd-test.gocd.yaml
+++ b/ci/gocd-test.gocd.yaml
@@ -1,7 +1,7 @@
 ---
 format_version: 10
 pipelines:
-  gocd-test:
+  gocd-test-v2:
     group: defaultGroup
     label_template: ${COUNT}
     lock_behavior: none
