--- a/ci/gocd-test.gocd.yaml
+++ b/ci/gocd-test.gocd.yaml
@@ -25,7 +25,7 @@ pipelines:
               timeout: 0
               tasks:
                 - exec:
-                    command: docker build -t "test-build-$(git rev-parse HEAD)" .
+                    command: echo $(ls) && docker build -t "test-build-$(git rev-parse HEAD)" .
                     run_if: passed
       - formatting:
           fetch_materials: true
@@ -39,7 +39,7 @@ pipelines:
               timeout: 0
               tasks:
                 - exec:
-                    command: echo $(ls) && docker run "test-build-$(git rev-parse HEAD)" black --check ./src
+                    command: docker run "test-build-$(git rev-parse HEAD)" black --check ./src
                     run_if: passed
       - args-sorting:
           fetch_materials: true
