--- a/ci/gocd-test.gocd.yaml
+++ b/ci/gocd-test.gocd.yaml
@@ -25,9 +25,7 @@ pipelines:
               timeout: 0
               tasks:
                 - exec:
-                    arguments:
-                      - docker build -t "test-build-$(git rev-parse HEAD)" .
-                    command: /bin/zsh
+                    command: /usr/local/bin/docker build -t "test-build-$(git rev-parse HEAD)" .
                     run_if: passed
       - formatting:
           fetch_materials: true
