--- a/ci/gocd-test.gocd.yaml
+++ b/ci/gocd-test.gocd.yaml
@@ -34,6 +34,11 @@ pipelines:
               timeout: 0
               tasks:
                 - exec:
+                  arguments:
+                      - echo ${GO_SCM_TEST_GIT_PR_TARGET_BRANCH}
+                    command: /bin/zsh
+                    run_if: passed
+                - exec:
                     arguments:
                       - -c
                       - docker build -t test-build-$(git rev-parse HEAD) .
