--- a/ci/gocd-test.gocd.yaml
+++ b/ci/gocd-test.gocd.yaml
@@ -35,7 +35,7 @@ pipelines:
               tasks:
                 - exec:
                     arguments:
-                      - echo ${GO_SCM_TEST_GIT_PR_TARGET_BRANCH}
+                      - echo $GO_SCM_TEST_GIT_PR_PR_ID
                     command: /bin/zsh
                     run_if: passed
                 - exec:
