--- a/ci/gocd-test.gocd.yaml
+++ b/ci/gocd-test.gocd.yaml
@@ -34,9 +34,7 @@ pipelines:
               timeout: 0
               tasks:
                 - exec:
-                    arguments:
-                      - echo $GO_SCM_TEST_GIT_PR_PR_ID
-                    command: /bin/zsh
+                    command: echo $GO_SCM_TEST_GIT_PR_PR_ID
                     run_if: passed
                 - exec:
                     arguments:
