--- a/ci/gocd-test.gocd.yaml
+++ b/ci/gocd-test.gocd.yaml
@@ -34,7 +34,7 @@ pipelines:
               timeout: 0
               tasks:
                 - exec:
-                    command: echo $GO_SCM_TEST_GIT_PR_PR_ID
+                    command: echo $(echo $TEST)
                     run_if: passed
                 - exec:
                     arguments:
