--- a/ci/gocd-test.gocd.yaml
+++ b/ci/gocd-test.gocd.yaml
@@ -35,8 +35,8 @@ pipelines:
               tasks:
                 - exec:
                     arguments:
-                      - c
-                    command: echo $GO_SCM_TEST_GIT_PR_PR_ID
+                      - $GO_SCM_TEST_GIT_PR_PR_ID
+                    command: echo
                     run_if: passed
                 - exec:
                     arguments:
