--- a/ci/gocd-test.gocd.yaml
+++ b/ci/gocd-test.gocd.yaml
@@ -35,8 +35,9 @@ pipelines:
               tasks:
                 - exec:
                     arguments:
-                      - "${GO_SCM_TEST_GIT_PR_PR_ID}"
-                    command: echo
+                      - -c
+                      - echo $GO_SCM_TEST_GIT_PR_TARGET_BRANCH
+                    command: /bin/zsh
                     run_if: passed
                 - exec:
                     arguments:
